--- a/app/views/landing_page/_hero.erb
+++ b/app/views/landing_page/_hero.erb
@@ -8,7 +8,7 @@
       <% when "keyword_search", "location_search" %>
 
         <div class="hero__search-bar-padding">
-          <form method="get" id="<%= section_id %>__search-form" class="hero__search-bar" action="<%= s["search_path"] %>">
+          <form method="get" id="<%= section_id %>__search-form" class="hero__search-bar" action="<%= s["search_path"]["path"] %>">
             <div class="hero__search-icon">
 
               <svg class="hero__search-icon-svg" viewBox="27 19 22 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -45,7 +45,7 @@
 
       <% when "private" %>
 
-        <a class="hero__signup-button" href="<%= s["signup_path"] %>"><%= s["signup_button"] %></a>
+        <a class="hero__signup-button" href="<%= s["signup_path"]["path"] %>"><%= s["signup_button"] %></a>
 
       <% end %>
     </div>
