--- a/app/views/landing_page/_hero.erb
+++ b/app/views/landing_page/_hero.erb
@@ -8,14 +8,14 @@
   .hero__signup-button,
   .hero__signup-button:active
   {
-    background-color: <%= s["search_button_color"]["value"] %>;
+    background-color: rgb(<%= s["search_button_color"]["value"].join(",") %>);
   }
 
   .hero__search-button:hover,
   .hero__search-button:focus,
   .hero__signup-button:hover,
   .hero__signup-button:focus {
-    background-color: <%= s["search_button_color_hover"]["value"] %>;
+    background-color: rgb(<%= s["search_button_color_hover"]["value"].join(",") %>);
   }
 <% end %>
 
