--- a/app/assets/stylesheets/landing_page/sections/categories.scss
+++ b/app/assets/stylesheets/landing_page/sections/categories.scss
@@ -1,5 +1,25 @@
 @import "../mixins/all";
 
+$categories__desktop-height-7: 525px;
+$categories__desktop-height-6: 558px;
+$categories__desktop-height-5: 558px;
+$categories__desktop-height-4: 208px;
+$categories__desktop-height-3: 282px;
+
+$categories__tablet-height-7: 457px; // The height is actually more than this, but this is the
+                                     // number which is used to calculate the area based on the ratio
+$categories__tablet-height-6: 457px;
+$categories__tablet-height-5: 457px;
+$categories__tablet-height-4: 441px;
+$categories__tablet-height-3: 169px;
+
+$categories__mobile-height-big: 163px;
+$categories__mobile-height-small: 123px;
+
+$categories__desktop-gutter: 18px;
+$categories__tablet-gutter: 14px;
+$categories__mobile-gutter: 12px;
+
 .categories__section {
   color: #525961;
 
@@ -11,14 +31,18 @@
 }
 
 .categories__content {
+  margin: 0 auto;
   text-align: center;
 
+  // mobile
+  width: 100%;
+
   @media #{$tablet} {
-    margin: 0 auto;
+    width: 100%;
   }
 
   @media #{$desktop} {
-    margin: 0 auto;
+    max-width: 1114px + $categories__desktop-gutter;
   }
 }
 
@@ -69,108 +93,223 @@
   @extend .landing-page__button;
 }
 
-$categories__height-7: 525px;
-$categories__height-6: 558px;
-$categories__height-5: 558px;
-$categories__height-4: 208px;
-$categories__height-3: 282px;
-
-$categories__desktop-gutter: 18px;
-
 .categories__categories {
   @include prefix-val(display, flex);
   @include prefix-prop(flex-wrap, wrap);
 
   // mobile
-  width: 100%;
-  padding-bottom: 36px;
+  padding: 0px (24px - $categories__tablet-gutter / 2) 36px (24px - $categories__tablet-gutter / 2);
 
   @media #{$tablet} {
-    width: 1114px;
-    padding-bottom: 48px;
+    padding: 0px (48px - $categories__tablet-gutter / 2) 48px (48px - $categories__tablet-gutter / 2);
   }
 
   @media #{$desktop} {
-    width: 1114px + $categories__desktop-gutter;
-    padding-bottom: 60px;
+    padding: 0px 0px 60px 0px;
   }
 }
 
 .categories__category {
-  padding: $categories__desktop-gutter / 2;
+  padding: $categories__mobile-gutter / 2;
+
+  @media #{$tablet} {
+    padding: $categories__tablet-gutter / 2;
+  }
+
+  @media #{$desktop} {
+    padding: $categories__desktop-gutter / 2;
+  }
+}
+
+@mixin category-mobile-style($num_of_categories) {
+  width: 50%;
+  height: $categories__mobile-height-small;
+
+  @if $num_of_categories % 2 == 1 {
+    &:first-child {
+      width: 100%;
+      height: $categories__mobile-height-big;
+    }
+  }
 }
 
 .categories__category--7 {
   @extend .categories__category;
 
-  &:nth-child(1) {
-    width: 50%;
-    @include golden-ratio-numerator(height, $categories__height-7);
+  // mobile
+  @include category-mobile-style(7);
+
+  @media #{$tablet} {
+    &:nth-child(1) {
+      width: (100% / 3 * 2);
+      @include golden-ratio-numerator(height, $categories__tablet-height-7);
+    }
+
+    &:nth-child(2) {
+      width: (100% / 3 * 1);
+      @include golden-ratio-numerator(height, $categories__tablet-height-7);
+    }
+
+    &:nth-child(3),
+    &:nth-child(4) {
+      width: 50%;
+      @include golden-ratio-denominator(height, $categories__tablet-height-7);
+    }
+
+    &:nth-child(5),
+    &:nth-child(6),
+    &:nth-child(7) {
+      width: (100% / 3);
+      @include golden-ratio-denominator(height, $categories__tablet-height-7);
+    }
   }
 
-  &:nth-child(2),
-  &:nth-child(3) {
-    width: 25%;
-    @include golden-ratio-numerator(height, $categories__height-7);
-  }
+  @media #{$desktop} {
+    &:nth-child(1) {
+      width: 50%;
+      @include golden-ratio-numerator(height, $categories__desktop-height-7);
+    }
 
-  &:nth-child(4),
-  &:nth-child(5),
-  &:nth-child(6),
-  &:nth-child(7) {
-    width: 25%;
-    @include golden-ratio-denominator(height, $categories__height-7);
+    &:nth-child(2),
+    &:nth-child(3) {
+      width: 25%;
+      @include golden-ratio-numerator(height, $categories__desktop-height-7);
+    }
+
+    &:nth-child(4),
+    &:nth-child(5),
+    &:nth-child(6),
+    &:nth-child(7) {
+      width: 25%;
+      @include golden-ratio-denominator(height, $categories__desktop-height-7);
+    }
   }
 }
 
 .categories__category--6 {
   @extend .categories__category;
-  width: (100% / 3);
 
-  &:nth-child(1),
-  &:nth-child(2),
-  &:nth-child(3) {
-    @include golden-ratio-numerator(height, $categories__height-6);
+  // mobile
+  @include category-mobile-style(6);
+
+  @media #{$tablet} {
+    width: (100% / 3);
+
+    &:nth-child(1),
+    &:nth-child(2),
+    &:nth-child(3) {
+      @include golden-ratio-numerator(height, $categories__tablet-height-6);
+    }
+
+    &:nth-child(4),
+    &:nth-child(5),
+    &:nth-child(6) {
+      @include golden-ratio-denominator(height, $categories__tablet-height-6);
+    }
   }
 
-  &:nth-child(4),
-  &:nth-child(5),
-  &:nth-child(6) {
-    @include golden-ratio-denominator(height, $categories__height-6);
+  @media #{$desktop} {
+    width: (100% / 3);
+
+    &:nth-child(1),
+    &:nth-child(2),
+    &:nth-child(3) {
+      @include golden-ratio-numerator(height, $categories__desktop-height-6);
+    }
+
+    &:nth-child(4),
+    &:nth-child(5),
+    &:nth-child(6) {
+      @include golden-ratio-denominator(height, $categories__desktop-height-6);
+    }
   }
 }
 
 .categories__category--5 {
   @extend .categories__category;
 
-  &:nth-child(1) {
-    width: (100% / 3 * 2);
-    @include golden-ratio-numerator(height, $categories__height-5);
+  // mobile
+  @include category-mobile-style(5);
+
+  @media #{$tablet} {
+    &:nth-child(1) {
+      width: (100% / 3 * 2);
+      @include golden-ratio-numerator(height, $categories__tablet-height-5);
+    }
+
+    &:nth-child(2) {
+      width: (100% / 3);
+      @include golden-ratio-numerator(height, $categories__tablet-height-5);
+    }
+
+    &:nth-child(3),
+    &:nth-child(4),
+    &:nth-child(5) {
+      width: (100% / 3);
+      @include golden-ratio-denominator(height, $categories__tablet-height-5);
+    }
   }
 
-  &:nth-child(2) {
-    width: (100% / 3);
-    @include golden-ratio-numerator(height, $categories__height-5);
-  }
+  @media #{$desktop} {
+    &:nth-child(1) {
+      width: (100% / 3 * 2);
+      @include golden-ratio-numerator(height, $categories__desktop-height-5);
+    }
 
-  &:nth-child(3),
-  &:nth-child(4),
-  &:nth-child(5) {
-    width: (100% / 3);
-    @include golden-ratio-denominator(height, $categories__height-5);
+    &:nth-child(2) {
+      width: (100% / 3);
+      @include golden-ratio-numerator(height, $categories__desktop-height-5);
+    }
+
+    &:nth-child(3),
+    &:nth-child(4),
+    &:nth-child(5) {
+      width: (100% / 3);
+      @include golden-ratio-denominator(height, $categories__desktop-height-5);
+    }
   }
 }
 
 .categories__category--4 {
   @extend .categories__category;
-  width: 25%;
-  height: $categories__height-4;
+
+  // mobile
+  @include category-mobile-style(4);
+
+  @media #{$tablet} {
+    width: 50%;
+
+    &:nth-child(1),
+    &:nth-child(2) {
+      @include golden-ratio-numerator(height, $categories__tablet-height-4);
+    }
+
+    &:nth-child(3),
+    &:nth-child(4) {
+      @include golden-ratio-denominator(height, $categories__tablet-height-4);
+    }
+  }
+
+  @media #{$desktop} {
+    width: 25%;
+    height: $categories__desktop-height-4;
+  }
 }
 
 .categories__category--3 {
   @extend .categories__category;
   width: (100% / 3);
-  height: $categories__height-3;
+
+  // mobile
+  @include category-mobile-style(3);
+
+  @media #{$tablet} {
+    height: $categories__tablet-height-3;
+  }
+
+  @media #{$desktop} {
+    height: $categories__desktop-height-3;
+  }
 }
 
 .col-content {
