--- a/app/views/landing_page/_categories.erb
+++ b/app/views/landing_page/_categories.erb
@@ -28,64 +28,43 @@
     <p class="categories__paragraph"><%= s["paragraph"] %></p>
 
     <div class="categories__categories">
-      <div class="categories__row--top-7">
-        <div class="categories__col--2-4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-      </div>
-
-      <div class="categories__row--bottom-7">
-        <div class="categories__col--1-4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-      </div>
+        <div class="categories__category--7"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--7"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--7"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--7"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--7"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--7"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--7"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
     </div>
 
     <div class="categories__categories">
-      <div class="categories__row--top-6">
-        <div class="categories__col--1-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-      </div>
-
-      <div class="categories__row--bottom-6">
-        <div class="categories__col--1-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-      </div>
-
+        <div class="categories__category--6"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--6"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--6"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--6"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--6"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--6"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
     </div>
 
     <div class="categories__categories">
-      <div class="categories__row--top-5">
-        <div class="categories__col--2-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-      </div>
-
-      <div class="categories__row--bottom-5">
-        <div class="categories__col--1-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-      </div>
-
+        <div class="categories__category--5"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--5"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--5"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--5"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--5"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
     </div>
 
     <div class="categories__categories">
-      <div class="categories__row--4">
-        <div class="categories__col--1-4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-      </div>
+        <div class="categories__category--4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--4"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
     </div>
 
     <div class="categories__categories">
-      <div class="categories__row--3">
-        <div class="categories__col--1-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-        <div class="categories__col--1-3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
-      </div>
+        <div class="categories__category--3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
+        <div class="categories__category--3"><a href="#"><div class="<%= section_id %>__col-content col-content"><h3 class="categories__category-title">Title</h3></div></a></div>
     </div>
 
     <% if s["button_title"] %>
