--- a/app/assets/stylesheets/landing_page/sections/categories.scss
+++ b/app/assets/stylesheets/landing_page/sections/categories.scss
@@ -319,20 +319,17 @@ $categories__mobile-gutter: 12px;
   }
 }
 
-.col-content {
+.categories__category-content {
   @include prefix-val(display, flex);
   @include prefix-prop(align-items, center);
 
   border-radius: 4px;
   background-size: cover;
   background-position: center;
-  background-color: #FDFDFD;
 
   box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.10), inset 0 0 0 999999px rgba(0, 0, 0, 0.2); /* big enough number to cover the whole area */
   width: 100%;
   height: 100%;
-
-  background-image: url('landing_page/hero.jpg');
 
   &:hover {
     @include hover-transition(box-shadow);
