--- a/client/app/assets/styles/base.css
+++ b/client/app/assets/styles/base.css
@@ -2,7 +2,10 @@ html {
   box-sizing: border-box;
   font-size: 14px;
 }
-*, *:before, *:after {
+
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
