Make template tolerant to nil values

--- a/app/views/landing_page/_categories.erb
+++ b/app/views/landing_page/_categories.erb
@@ -29,11 +29,12 @@
 
     <div class="categories__categories">
       <% num_of_categories = s["categories"].length %>
-      <% s["categories"].each do |c| %>
+      <% s["categories"].each do |category| %>
+        <% c = category["category"] || {} # Make template tolerant to nil values %>
         <div class="categories__category--<%= num_of_categories %>">
-          <a href="<%= c["category"]["path"] %>">
-            <div class="<%= section_id %>__categories__category-content categories__category-content" style="background-image: url(<%= c["background_image"]["src"] %>)">
-              <h3 class="categories__category-title"><%= c["category"]["title"] %></h3>
+          <a href="<%= c["path"] %>">
+            <div class="<%= section_id %>__categories__category-content categories__category-content" style="background-image: url(<%= category["background_image"]["src"] %>)">
+              <h3 class="categories__category-title"><%= c["title"] %></h3>
             </div>
           </a>
         </div>
